[build-system]
requires = ["setuptools>=61.0", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "arch_vlm"
version = "1.0"
description = "VLMs with different architectures"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    'accelerate', 'apex', 'bitsandbytes', 'datasets', 'torch', 'deepspeed', 'einops', 'einops-exts',
    'fastapi', 'flash_attn', 'gradio', 'gradio_client', 'httpx', 'markdown2', 'numpy', 'openpyxl',
    'peft', 'protobuf', 'pydantic', 'pypandoc', 'requests', 'scikit-learn', 'sentencepiece', 'shortuuid',
    'tabulate', 'timm', 'tiktoken', 'tokenizers', 'torchvision', 'transformers', 'uvicorn', 'xformers'
]

[tool.basedpyright]
typeCheckingMode = "basic"

[project.urls]
"Homepage" = "https://github.com/BAAI-DCAI/Bunny"
"Discussion" = "https://github.com/BAAI-DCAI/Bunny/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
